<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:paddingTop="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    android:orientation="vertical"
    android:paddingLeft="@dimen/main_padding"
    android:layout_height="match_parent"
    tools:context=".welcomeActivity">

    <TextView
        android:id="@+id/textView_welcome"
        android:paddingTop="8dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/great_vibes"
        android:layout_marginRight="20dp"
        android:background="@drawable/actionbar_background"
        android:gravity="center"
        android:text="@string/who_am_i"
        android:textColor="@color/text_color_white"
        android:textSize="44sp" />

    <LinearLayout
        android:layout_marginTop="65dp"
        android:layout_marginBottom="65dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:layout_gravity="center_horizontal"
            style="@style/MyCardView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="40dp"
            android:layout_width="match_parent"
            android:id="@+id/customerButton"
            android:layout_weight="1"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/customer"
                    android:textSize="44sp"
                    android:fontFamily="@font/great_vibes"
                    android:textColor="@color/button_color_black1"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/MyCardView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="40dp"
            android:layout_width="match_parent"
            android:id="@+id/employButton"
            android:layout_weight="1"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/employ"
                    android:fontFamily="@font/great_vibes"
                    android:textSize="44sp"
                    android:textColor="@color/button_color_black1"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:id="@+id/image_welcome"
        android:src="@drawable/ic_french_fries"
        android:layout_height="0dp"/>


</LinearLayout>
