<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:padding="@dimen/main_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:paddingTop="8dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/great_vibes"
        android:layout_marginRight="20dp"
        android:background="@drawable/actionbar_background"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/text_color_white"
        android:textSize="44sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_marginBottom="30dp"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:id="@+id/card1_customer"
            android:layout_column="0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_tea"
                    android:id="@+id/card1_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/coffee_tea"
                    android:layout_below="@id/card1_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:id="@+id/card2_customer"
            android:layout_columnWeight="1"
            android:layout_column="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_frappe"
                    android:id="@+id/card2_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/drink_shakes"
                    android:layout_below="@id/card2_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:id="@+id/card3_customer"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_column="0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_pizza"
                    android:id="@+id/card3_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/pizza_burger"
                    android:layout_below="@id/card3_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:id="@+id/card4_customer"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_column="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_dish"
                    android:id="@+id/card4_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/lunch_dinner"
                    android:layout_below="@id/card4_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:id="@+id/card5_customer"
            android:layout_columnWeight="1"
            android:layout_column="0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_salad"
                    android:id="@+id/card5_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/salad_soup"
                    android:layout_below="@id/card5_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewForMenu"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_gravity="fill"
            android:id="@+id/card6_customer"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_column="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_ice_cream"
                    android:id="@+id/card6_image"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="Ice-Cream \n  Desserts"
                    android:layout_below="@id/card6_image"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:orientation="vertical"-->
<!--    android:layout_height="match_parent">-->

<!--    <GridLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:rowCount="3"-->
<!--        android:columnCount="2"-->
<!--        android:layout_weight="1"-->
<!--        android:layout_height="0dp">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="0"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:id="@+id/card1_customer"-->
<!--            android:layout_column="0">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="one"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="0"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:id="@+id/card2_customer"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_column="1">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="two"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="1"-->
<!--            android:id="@+id/card3_customer"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_column="0">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="three"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="1"-->
<!--            android:layout_gravity="fill"-->
<!--            android:id="@+id/card4_customer"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_column="1">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="four"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="2"-->
<!--            android:layout_gravity="fill"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:id="@+id/card5_customer"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_column="0">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="five"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="2"-->
<!--            android:layout_gravity="fill"-->
<!--            android:id="@+id/card6_customer"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardElevation="8dp"-->
<!--            app:cardCornerRadius="8dp"-->
<!--            android:layout_column="1">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:textSize="40dp"-->
<!--                android:text="six"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--    </GridLayout>-->

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:text="order through call"-->
<!--        android:id="@+id/orderThroughCallButton"-->
<!--        android:layout_height="wrap_content"/>-->

<!--</LinearLayout>-->